# ChessBot

./: Cargo.toml
bot/: Cargo.toml
bot/src/: board.rs  game_move.rs  main.rs  piece.rs
lichess_api/: Cargo.toml
lichess_api/src/: game.rs  game_event.rs  lib.rs  lichess.rs  platform_event.rs  stream_utils.rs
lichess_api/src/stream/: game_event.rs  mod.rs  platform_event.rs
src/: main.rs
src/stream/: mod.rs  model.rs  platform_event.rs
