[package]
name = "RustTest"
version = "0.1.0"
authors = ["qaze <qazedcwsx4@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0"
hyper-tls = "0.4"
