[package]
name = "bot"
version = "0.1.0"
authors = ["qaze <qazedcwsx4@gmail.com>"]
edition = "2018"

[dependencies]
colored = "2"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper-tls = "0.4"
lichess_api = { path = "../lichess_api" }